Running the sweeps, Part 2